# nonebot-plugin-furryyunhei

./: __init__.py  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_furryyunhei/: __init__.py
